fixed header scrolling on mobile bug

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,15 +13,6 @@
   position: relative;
 }
 
-.page-container-scroll-trigger {
-  height: 100vh;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
 .page-title-container {
   height: 100svh;
   display: flex;
